# MarkerOpenCV

./: .gitignore  CMakeLists.txt  README.md
python/: recognize.py
src/: makefile  marker_generator.cpp
